force-app/main/default/objects/CartItem/fields/Configuration_ID__c.field-meta.xml
<CustomField>
    <fullName>Configuration_ID__c</fullName>
    <description>BC-351 configuration ID from product webconfigurator</description>
    <inlineHelpText>BC-351 configuration ID from product webconfigurator</inlineHelpText>
    <label>Configuration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>