force-app/main/default/objects/CartItem/fields/Configuration_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Inventory</label>
    <referenceTo>PortalInventoryDetail__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>