force-app/main/default/objects/CartItem/fields/Configuration_Smart_String__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Smart_String__c</fullName>
    <description>BC-257 add field to store webconfigurator values</description>
    <inlineHelpText>BC-257 add field to store webconfigurator values</inlineHelpText>
    <label>Configuration Smart String</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>