force-app/main/default/objects/CartItem/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <formula>IF(Quantity &lt; Product_Total_Inventory__c, &apos;In Stock&apos;, &apos;XXXXXX&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Status</label>
    <type>Text</type>
</CustomField>