force-app/main/default/objects/CartItem/fields/Is_Configuration_Line__c.field-meta.xml
<CustomField>
    <fullName>Is_Configuration_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Configuration Line</label>
    <type>Checkbox</type>
</CustomField>