force-app/main/default/objects/CartItem/fields/Product_Total_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Total_Inventory__c</fullName>
    <formula>Product2.Total_Inventory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Total Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>